--- a/book-site/src/app/footer/footer.component.html
+++ b/book-site/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<p>footer works!</p>
+<h5>footer works!</h5>
 <p class="h1">h1. Bootstrap heading</p>
 <p class="h2">h2. Bootstrap heading</p>
 <p class="h3">h3. Bootstrap heading</p>
